--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,14 +2,20 @@
   "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer", 
-    "@semantic-release/release-notes-generator", 
-    "@semantic-release/github",
+    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/exec", 
+      {
+        "prepareCmd": "./bump.sh ${nextRelease.version}"
+      }
+    ], 
     [
       "@semantic-release/changelog",
       {
         "changelogFile": "CHANGELOG.md"
       }
     ],
+    "@semantic-release/github",
     [
         "@semantic-release/git",
         {
