chore(ha-pes): fix conventional commit config

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -20,7 +20,7 @@
         "@semantic-release/git",
         {
             "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
-            "assets": ["CHANGELOG.md", "pes/manifest.json"]
+            "assets": ["CHANGELOG.md", "custom_components/pes/manifest.json"]
         }
     ]
   ]
